--- a/frontend/farming.html
+++ b/frontend/farming.html
@@ -28,6 +28,10 @@
           <i class="fas fa-tractor"></i>
           Farming Dashboard
         </a>
+        <a href="farmer-profit-dashboard.html" class="nav-link">
+          <i class="fas fa-calculator"></i>
+          Profit Calculator
+        </a>
         <a href="crop-animation-demo.html" class="nav-link">
           <i class="fas fa-seedling"></i>
           Crop Animations
@@ -492,6 +496,10 @@
     <section class="quick-actions">
       <h2>🚀 Quick Actions</h2>
       <div class="actions-grid">
+        <button class="action-btn" onclick="window.open('farmer-profit-dashboard.html', '_blank')">
+          <i class="fas fa-calculator"></i>
+          <span>Profit Calculator</span>
+        </button>
         <button class="action-btn" onclick="refreshFarmingData()">
           <i class="fas fa-sync-alt"></i>
           <span>Refresh Data</span>
