--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,10 @@
           <i class="fas fa-tractor"></i>
           <span>Farming Dashboard</span>
         </a>
+        <a href="farmer-profit-dashboard.html" class="profit-link">
+          <i class="fas fa-calculator"></i>
+          <span>Farmer Profit Calculator</span>
+        </a>
       </div>
     </section>
 
